<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProjectUas</string>
    <string name="cup">Turnamen</string>
    <string name="id">BolaPedia</string>
    <string name="tap">Turnamen Sepak Bola Dunia</string>
    <string name="tentang">Tentang</string>
    <string name="profilF">PROFIL</string>
    <string name="nama_nnim_nprodi_nfakultas_nhobi">Nama\nNIM\nProdi\nFakultas\nHobi</string>
    <string name="bayu_kartawan_n_200602005_n_teknik_informatika_n_teknik_n_game_online">:Bayu Kartawan\n:200602005\n:Teknik Informatika\n:Teknik\n:Game Online</string>
    <string name="negara">Negara</string>
    <string name="deskripsi_negara">Deskripsi Negara</string>
    <string name="belgia">Belgia</string>
    <string name="kotabelgia">Brussel, Daerah Ibu Kota Brussel</string>
    <string name="belgiadetail">Pemerintah: Demokrasi, Monarki, Federasi, Sistem parlementer, Demokrasi perwakilan, Monarki konstitusional, Monarki populer</string>
    <string name="spanyol">Spanyol</string>
    <string name="kotaspanyol">Ibu Kota Madrid</string>
    <string name="spanyoldetail">Spanyol adalah negara demokrasi yang diselenggarakan dalam bentuk pemerintahan parlementer di bawah monarki konstitusional</string>
    <string name="inggris">Inggris</string>
    <string name="inggrisdetail"> Pemerintah: Negara konstituen, Monarki konstitusional</string>
    <string name="prancis">Prancis</string>
    <string name="kotaprancis">Ibu kota: Paris</string>
    <string name="prancisdetail">Pemerintahan: Republik semi-presidensial</string>
    <string name="germainkota">Ibu kota: Berlin</string>
    <string name="germain">Jerman</string>
    <string name="germaindetail">Pemerintahan	Republik presidensial</string>
    <string name="swedia">Swedia</string>
    <string name="kotaargentina">Ibu kota: Buenos Aires</string>
    <string name="argentina">Argentina</string>
    <string name="kotabrazil">Ibu Kota: Brasília</string>
    <string name="argentinadetail">Government	Federal presidential republic</string>
    <string name="mexico">Meksiko</string>
    <string name="kotainggris">London</string>
    <string name="mexicodetail">Pemerintahan: Republik presidensial</string>
    <string name="kotamexico">Ibu kota: Kota Meksiko</string>
    <string name="amerika">Amerika</string>
    <string name="kotaamerika">Ibu kota: Washington, D.C.</string>
    <string name="amerikadetail">Pemerintah: Federasi, Sistem presidensial, Demokrasi liberal, Republik federal, Republik konstitusional</string>
    <string name="kotakolombia">Ibu kota: Bogotá</string>
    <string name="kolombiadetail">Pemerintahan	Republik presidensial</string>
    <string name="uruguay">Uruguay</string>
    <string name="kotauruguay">Ibu kota: Montevideo</string>
    <string name="uruguaydetail">Pemerintahan	Republik presidensial</string>
    <string name="indonesia">Indonesia</string>
    <string name="brazil">Brasil</string>
    <string name="kotaindonesia">Ibu kota: Jakarta</string>
    <string name="indonesiadetail">Pemerintahan	Negara kesatuan bersistem Republik presidensial</string>
    <string name="ekuador">Ekuador</string>
    <string name="malaydetail">Pemerintahan: Federal parlementer monarki konstitusional</string>
    <string name="malay">Malaysia</string>
    <string name="kotamalay">Ibu kota: Kuala Lumpur</string>
    <string name="myanmardetail">Pemerintah: Sistem parlementer, Negara kesatuan, Sistem presidensial, Republik parlementer</string>
    <string name="singapura">Singapura</string>
    <string name="myanmar">Myanmar</string>
    <string name="kotamyanmar">Ibu kota: Naypyidaw</string>
    <string name="kotasingapura">Ibu Kota: Singapura</string>
    <string name="kolombia">Kolombia</string>
    <string name="brazildetail">Pemerintahan: Republik presidensial</string>
    <string name="singapuradetail">Pemerintahan: Kesatuan partai dominan republik parlementer</string>
    <string name="kotaswedia">Ibu kota: Stockholm</string>
    <string name="swediadetail">Pemerintahan: Kesatuan parlementer kerajaan konstitusional</string>
    <string name="daftar">Daftar Ras Hewan</string>
    <string name="thailand">Thailand</string>
    <string name="kotathailand">Ibu Kota: Bangkok</string>
    <string name="thailanddetail">Pemerintahan: Kesatuan parlementer monarki konstitusional</string>
    <string name="vietnam">Vietnam</string>
    <string name="kotavietnam">Capital: Hanoi</string>
    <string name="vietnamdetal">Pemerintahan: Kesatuan Marxis-Leninis satu partai sosialis republik</string>
</resources>