<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/purple_500"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txJudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cup"
        android:background="@drawable/corner3"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginBottom="24dp"
        />

    <ImageView
        android:id="@+id/gambarNegara"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/spain"
        android:scaleType="fitCenter"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:id="@+id/txJenis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        />
    <TextView
        android:id="@+id/txRas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/negara"
        android:background="@drawable/corner3"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/txAsal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textColor="@color/grey"
        android:text="Asal" />
    <TextView
        android:id="@+id/txDeskripsi"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@drawable/corner3"
        android:fontFamily="@font/poppins"
        android:text="@string/deskripsi_negara" />
</LinearLayout>