<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/purple_500"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/id"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/btn_euro"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:layout_height="150dp"
            android:background="@drawable/corner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/eurologo"
            android:scaleType="fitCenter"/>

        <ImageButton
            android:id="@+id/btn_copa"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/corner"
            android:layout_height="150dp"
            android:src="@drawable/copaamerica"
            android:scaleType="fitCenter"
            />
        <ImageButton
            android:id="@+id/btn_afc"
            android:padding="15dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/corner"
            android:layout_height="150dp"
            android:src="@drawable/afclogo"
            android:scaleType="fitCenter"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/tap"
        android:textColor="@color/white"
        android:textStyle="italic" />
    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btn_activity_main_pindah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tentang"
            android:background="@color/white"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/poppins_medium"
            android:onClick="Pindah"
            />
    </LinearLayout>
</LinearLayout>